--- a/tamu-hack-2021/my-app/package.json
+++ b/tamu-hack-2021/my-app/package.json
@@ -8,8 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ercpereda/react-native-accordion": "^2.0.6",
+    "@material-ui/core": "^4.11.3",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
